fixed overflowing in small screens

--- a/docs/global.css
+++ b/docs/global.css
@@ -15,6 +15,7 @@
 
 body {
 	background-color: var(--bg);
+	max-height: 100vh;
 }
 
 * {
